--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,5 +12,19 @@ header{
     padding: 20px;
     text-align: center;
 }
+/* To center our Nav-Bar elements so this centers our buttons for the news categories */
+ nav {
+    margin: 10px 0;
+    text-align: center;
+}
+nav button {
+    margin: 0 5px;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+
+}
 
 
