--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,3 +42,11 @@ nav button:hover {
     transition: background-color 0.3s ease;
 }
 
+/* I have added a border to the newsContainer to separate the news articles */
+#newsContainer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}
+
