--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,3 +62,18 @@ nav button:hover {
     transition: transform 0.2s;
 }
 
+/* I have added the news item:hover part */
+.news-item:hover {
+    transform: translateY(-5px);
+}
+
+.news-item img{
+    max-width: 100%;
+    border-radius: 5px;
+}
+.popup{
+    max-width: 100%;
+    border-radius: 5px;
+}
+
+
